# tastebud

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  lefthook.yml  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
e2e/: example.spec.ts  landing-page.spec.ts  matches.spec.ts  session-join.spec.ts  swipe.spec.ts
plan/: 00-overview.md  01-scraping.md  02-data-model.md  03-backend-api.md  04-frontend.md  05-shared-sessions.md  06-roadmap.md  07-testing-strategy.md  08-ux-decisions.md  09-ci-tooling.md
scraper/: pyproject.toml  test_scraper.py
scraper/src/scraper/: __init__.py  cli.py  config.py
scraper/src/scraper/fetcher/: __init__.py  cache.py  http_client.py
scraper/src/scraper/loader/: __init__.py  __main__.py  cli.py  supabase_loader.py  transform.py
scraper/src/scraper/models/: __init__.py  restaurant.py
scraper/src/scraper/parser/: __init__.py  detail.py  listing.py
scraper/src/scraper/storage/: __init__.py  json_writer.py
scraper/tests/: conftest.py  test_detail_parser.py  test_http_client.py  test_listing_parser.py  test_models.py  test_transform.py
src/app/: layout.tsx  page.tsx
src/components/: LandingPage.test.tsx  LandingPage.tsx  MatchesPage.test.tsx  MatchesPage.tsx  RestaurantCard.test.tsx  RestaurantCard.tsx  SessionJoinPage.test.tsx  SessionJoinPage.tsx  SwipePage.test.tsx  SwipePage.tsx
src/lib/: session-storage.ts  types.ts
src/lib/api/: auth.ts  errors.ts
src/test/: placeholder.test.ts
supabase/migrations/: 001_initial_schema.sql  002_session_filters.sql
(+24 files in other folders)
