[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper"
version = "0.1.0"
description = "Restaurant Week Boston data scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "supabase>=2.0.0",
]

[project.scripts]
scrape-rwb = "scraper.cli:main"
load-to-supabase = "scraper.loader.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "responses>=0.25.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
